added jdk10 and gss compilation hint